--- a/embed.html
+++ b/embed.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="https://glitch.com/favicon.ico">
   <title>Site Y</title>
   <style>
     :root {
@@ -73,7 +72,7 @@
       <p>Cookies:</p>
       <code id="cookies">__Host-partitioned-cookie=123; unpartitioned-cookie=456</code>
       <button>
-        <a href="site-y.html" target="_parent">Go to Site Y</a>
+        <a href="https://tagmate-analytics.github.io/site-y" target="_parent">Go to Site Y</a>
       </button>
     </div>
   </div>
