--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <code id="cookies">None</code>
 
         <button>
-          <a href="site-x.html">Go to Site X</a>
+          <a href="https://harshit-tatvic.github.io/site-x">Go to Site X</a>
         </button>
       </div>
       <div class="instructions">
@@ -122,7 +122,7 @@
         To reset the demo, clear all cookies for the site:
         <ol>
           <li>In <strong>Application > Storage > Cookies ></strong></li>
-          <li>Right click on <code>https://example.com</code></li>
+          <li>Right click on <code>https://tagmate-analytics.github.io/site-y</code></li>
           <li>Click <strong>Clear</strong></li>
         </ol>
       </div>
